--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,11 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a set of commands using the runners shell
     - name: Configure cmake
       run: |
         mkdir build
         cd build
         cmake ..
+
+    - name: Build proton
+      run: make all
