--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
 
     - name: Configure cmake
       run: |
-        pwd
-        if [ -d build ]; then
+        if not exist "build" mkdir
             cd build
             make clean
         else
@@ -33,8 +32,5 @@ jobs:
             cd build
         fi
         cmake ..
-
-    - name: Build proton
-      run: |
-        pwd
         make
+
