WIP: Actions Windows compile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,5 @@ jobs:
         mkdir build
         cd build
         cmake ..
-        set mypwd=%cd%
-        echo %mypwd%
+        Get-Location
 
