--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
         cd build
         cmake ..
         Get-Location
-
+        Get-ChildItem -Path D:/a/qpid-proton/qpid-proton/build -Force
