--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,14 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Configure cmake
+    - name: Configure
       run: |
         mkdir build
         cd build
         cmake ..
+
+    - name: Build
+      run: |
         Get-Location
         Get-ChildItem -Path D:/a/qpid-proton/qpid-proton/build -Force
+        MSBuild ALL_BUILD.vcxproj
