WIP: Actions Windows compile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: Build
       run: |
+        cd build
         Get-Location
         Get-ChildItem -Path D:/a/qpid-proton/qpid-proton/build -Force
         cmake --build ..
