WIP: Actions Windows compile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,7 @@ jobs:
         mkdir build
         cd build
         cmake ..
-        Get-ChildItem -Path D:/a/qpid-proton/qpid-proton/build -Force
+    - name: Build
+      run: |
+        cd build
         cmake --build .
