--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,7 @@ jobs:
       run: |
         cd build
         cmake --build .
+    - name: Test
+      run: |
+        cd build
+        cmake --build . --target test
